<resources>
    <string name="app_name">MVVMFactory</string>

    <string name="add_order_title">Create new order</string>
    <string name="add_order">Add order</string>
    <string name="orders">Orders</string>
    <string name="order">Order</string>

    <string name="type_of_clothes_title">Type</string>
    <string name="sleeve_length_title">Sleeve length</string>
    <string name="bust_title">Bust</string>
    <string name="weist_title">Weist</string>
    <string name="hip_title">Hip</string>
    <string name="shoulder_length_title">Shoulder length</string>
    <string name="color_title">Color</string>
    <string name="material_title">Material</string>
    <string name="customer_name_title">Customer name</string>
    <string name="contact_phone_title">Contact phone</string>
    <string name="contact_email_title">Contact email</string>

    <string name="size_hint">in cm</string>
    <string name="color_hint">Red</string>
    <string name="material_hint">Cotton</string>
    <string name="customer_name_hint">Petra Petric</string>
    <string name="contact_phone_hint">0985551234</string>
    <string name="contact_email_hint">petra.petric@gmail.com</string>

    <string name="sleeve_option_sleeveless">Sleeveless</string>
    <string name="sleeve_option_one">One sleeve</string>
    <string name="sleeve_option_long">Long sleeve</string>
    <string name="sleeve_option_short">Short sleeve</string>
    <string name="sleeve_option_nothing_selected">Not selected sleeve</string>

    <string name="error_empty_field">This field must be filled </string>
    <string name="error_invalid_size">Should have 2 or 3 digits</string>
    <string name="error_invalid_shoulder_length">Should have 1 or 2 digits</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_phone">Does not have the correct number of digits</string>

    <string name="snackbar_message">Order Added</string>
    <string name="snackbar_undo_option">Undo</string>

    <string name="bust_detail_label">Bust: </string>
    <string name="weist_detail_label">Weist: </string>
    <string name="hip_detail_label">Hip: </string>
    <string name="shoulder_length_detail_label">Shoulder length: </string>
    <string name="color_detail_label">Color: </string>
    <string name="material_detail_label">Material: </string>
</resources>