<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.add.AddOrderFragment">

    <LinearLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addPersonTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_order_title"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            android:fontFamily="@font/pacifico"/>

        <TextView
            android:id="@+id/type_Of_clothes_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/type_of_clothes_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/type_Of_clothes_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/bust_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/bust_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/bust_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/size_hint"
            android:inputType="number"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/weist_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/weist_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/weist_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/size_hint"
            android:inputType="number"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/hip_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/hip_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/hip_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/size_hint"
            android:inputType="number"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/shoulder_length_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/shoulder_length_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/shoulder_length_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/size_hint"
            android:inputType="number"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/sleeve_length_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/sleeve_length_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/sleeve_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/white">
            <RadioButton
                android:id="@+id/sleeveless_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleeve_option_sleeveless"/>
            <RadioButton
                android:id="@+id/one_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleeve_option_one"/>
            <RadioButton
                android:id="@+id/long_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleeve_option_long"/>
            <RadioButton
                android:id="@+id/short_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleeve_option_short"/>
        </RadioGroup>

        <TextView
            android:id="@+id/color_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/color_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/color_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/color_hint"
            android:inputType="text"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/material_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/material_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/material_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/material_hint"
            android:inputType="text"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/customer_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/customer_name_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/customer_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/customer_name_hint"
            android:inputType="text"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/contact_email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/contact_email_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/contact_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/contact_email_hint"
            android:inputType="textEmailAddress"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/contact_phone_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/contact_phone_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/contact_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/contact_phone_hint"
            android:inputType="phone"
            android:background="@color/white"/>

        <Button
            android:id="@+id/addOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/add_order"
            android:background="@color/white"/>
    </LinearLayout>
</ScrollView>